# intro-to-tests

./: .gitignore  README.md  pyproject.toml
my_lib/: functions.py
tests/: conftest.py  test_consul.py  test_fahrenheit_to_celsius.py  test_redshift.py
tests/fixtures/consul/: __init__.py
tests/fixtures/redshift/: __init__.py  schema.sql
