[tool.poetry]
name = "intro-to-tests"
version = "0.1.0"
description = ""
authors = ["Marcos Martins <contato@marcosmartins.me>"]
readme = "README.md"
packages = [{include = "intro_to_tests"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
docker = "^6.1.3"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "--verbose --exitfirst --showlocals --doctest-modules --capture=no"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
