[tool.poetry]
name = "intro-to-tests"
version = "0.1.0"
description = "Introduction to testing in Python"
authors = ["Marcos Martins <contato@marcosmartins.me>"]
readme = "README.md"
packages = [{include = "my_lib"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
python-consul2 = "^0.1.5"
docker = "^6.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
docker = "^6.1.3"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "--verbose --exitfirst --showlocals --doctest-modules --capture=no"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
